[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-url-shortener"
version = "0.1.0"
description = "Governed agentic SDLC prototype for a URL shortener"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "langgraph==0.6.6",
  "langgraph-checkpoint-sqlite==2.0.11",
  "openai==1.102.0",
  "typer==0.16.1",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "ruff==0.12.11",
  "mypy==1.17.1",
]

[project.scripts]
agentic-url = "agentic_url_shortener.cli:app"

[tool.setuptools.packages.find]
include = ["agentic_url_shortener*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
ignore_missing_imports = true

